!chore: updated dependencies, docker base image
Updated Dockerfile base image for Java 21. Updated Tomcat to 11.
Updated Lombok, Spring Boot versions for Java 21 compatibility. Removed unused querydsl.